# 2d-engine

./: .gitmodules  CMakeLists.txt
config/: settings.json
include/: Configuration.h  Error.h  RenderContext.h  ResourceManager.h  Scripting.h
src/: Configuration.c  Error.c  RenderContext.c  ResourceManager.c  Scripting.c  main.c
tools/contort/: CMakeLists.txt
tools/contort/include/: Tokenizer.h
tools/contort/src/: Tokenizer.c  main.c
tools/contort/tests/: CMakeLists.txt  test.c
tools/contort/tests/data/: example.c
